# Statistical-Learning

./: pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
Datasets/Advertising Data/: Notes.md  notebook.ipynb
Datasets/Auto Data/: Notes.md
Datasets/Boston Data/: Notes.md
Datasets/Titanic/: Notes.md
Notebooks/: auto.ipynb
